💄 > Fix z-index and width problems

--- a/components/Home/ProjectsList/style.scss
+++ b/components/Home/ProjectsList/style.scss
@@ -50,6 +50,7 @@
 @include md { 
     .project-list {
         align-items: flex-end;
+        width: initial;
         margin-left: 0;
 
         &-container {
